@@ -1,0 +1,3 @@
+let _ =
+  print_string test
+    where test = "test_where succeeded"
