@@ -1,0 +1,2 @@
+print_string test
+  where test = "test_where succeeded"
